--- a/src/styles.css
+++ b/src/styles.css
@@ -11,6 +11,9 @@ body {
     'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  transition: background-color 0.3s ease, color 0.3s ease;
+  background-color: var(--background);
+  color: var(--foreground);
 }
 
 code {
@@ -21,12 +24,12 @@ code {
 :root {
   --background: oklch(1 0 0);
   --foreground: oklch(0.141 0.005 285.823);
-  --card: oklch(1 0 0);
-  --card-foreground: oklch(0.141 0.005 285.823);
+  --card: oklch(93.1% 0.00011 271.152);
+  --card-foreground: oklch(100% 0.00011 271.152);
   --popover: oklch(1 0 0);
   --popover-foreground: oklch(0.141 0.005 285.823);
   --primary: oklch(0.21 0.006 285.885);
-  --primary-foreground: oklch(0.985 0 0);
+  --primary-foreground: oklch(100% 0.00011 271.152);
   --secondary: oklch(0.967 0.001 286.375);
   --secondary-foreground: oklch(0.21 0.006 285.885);
   --muted: oklch(0.967 0.001 286.375);
@@ -55,11 +58,11 @@ code {
 }
 
 .dark {
-  --background: oklch(0.141 0.005 285.823);
-  --foreground: oklch(0.985 0 0);
-  --card: oklch(0.141 0.005 285.823);
-  --card-foreground: oklch(0.985 0 0);
-  --popover: oklch(0.141 0.005 285.823);
+  --background: oklch(29.31% 0.03202 243.711);
+  --foreground: oklch(100% 0.00011 271.152);
+  --card: oklch(19.209% 0.01784 248.809);
+  --card-foreground: oklch(99.086% 0.00602 224.252);
+  --popover: oklch(25.721% 0.03867 246.802);
   --popover-foreground: oklch(0.985 0 0);
   --primary: oklch(0.985 0 0);
   --primary-foreground: oklch(0.21 0.006 285.885);
@@ -76,7 +79,7 @@ code {
   --ring: oklch(0.442 0.017 285.786);
   --chart-1: oklch(0.488 0.243 264.376);
   --chart-2: oklch(0.696 0.17 162.48);
-  --chart-3: oklch(0.769 0.188 70.08);
+  --chart-3:oklch(61.581% 0.11354 229.059);
   --chart-4: oklch(0.627 0.265 303.9);
   --chart-5: oklch(0.645 0.246 16.439);
   --sidebar: oklch(0.21 0.006 285.885);
@@ -87,6 +90,28 @@ code {
   --sidebar-accent-foreground: oklch(0.985 0 0);
   --sidebar-border: oklch(0.274 0.006 286.033);
   --sidebar-ring: oklch(0.442 0.017 285.786);
+}
+
+/* Estilos para el cuadro de tutorial con flecha */
+
+.tutorial-box {
+  position: fixed;
+  width: 150px;
+  padding-top: 1px;   /* ???*/
+  padding-bottom: 20px;
+  border-radius: 5px;
+  text-align: center;
+}
+
+.tutorial-box::after {
+  content: "";
+  position: absolute;
+  top: 00%; /* Coloca la flecha justo debajo del cuadro */
+  left: 99%;
+  transform: translateY(50%) rotate(-90deg); 
+  border-width: 10px;
+  border-style: solid;
+  border-color: var(--chart-3) transparent transparent transparent; /* Color de la flecha */
 }
 
 @theme inline {
