feat: add transition effects to body and main padding utility class

--- a/src/styles.css
+++ b/src/styles.css
@@ -132,7 +132,12 @@ code {
   * {
     @apply border-border outline-ring/50;
   }
+
   body {
-    @apply bg-background text-foreground;
+    @apply bg-background text-foreground transition-colors;
+  }
+
+  .main-padding {
+    @apply px-2 sm:px-4 md:px-8 lg:px-16 xl:px-32 2xl:px-48
   }
 }
